cmake_minimum_required(VERSION 2.8)

project(advcpp)

SET(CMAKE_CXX_STANDARD 20)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

add_executable(w1a1 "week1-app1.cpp")
add_executable(w1a2 "week1-app2.cpp")
add_executable(w2a1 "week2-app1.cpp")
add_executable(w3a1 "week3-app1.cpp")
add_executable(w3a2 "week3-app2.cpp")
add_executable(w3a3 "week3-app3.cpp")
