cmake_minimum_required(VERSION 3.0)

project(advcpp)

SET(CMAKE_CXX_STANDARD 20)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

add_executable(w1a1 "week1-app1.cpp")
add_executable(w1a2 "week1-app2.cpp")
add_executable(w2a1 "week2-app1.cpp")
add_executable(w3a1 "week3-app1.cpp")
add_executable(w3a2 "week3-app2.cpp")
add_executable(w3a3 "week3-app3.cpp")
add_executable(w4a1 "week4-app1.cpp")
add_executable(w4a2 "week4-app2.cpp")
add_executable(w5a1 "week5-app1.cpp")
add_executable(w5a2 "week5-app2.cpp")
add_executable(w6a1 "week6-app1.cpp")
add_executable(w7a1 "week7-app1.cpp")
add_executable(w7a2 "week7-app2.cpp")
add_executable(w7a3 "week7-app3.cpp")
add_executable(w7a4 "week7-app4.cpp")
add_executable(w8a1 "week8-app1.cpp")
add_executable(w8a2 "week8-app2.cpp")
add_executable(w8a3 "week8-app3.cpp")
add_executable(w8a4 "week8-app4.cpp")
add_executable(w9a1 "week9-app1.cpp")
add_executable(w9a2 "week9-app2.cpp")
add_executable(w9a3 "week9-app3.cpp")
